# hip-cts

./: .gitmodules  CMakeLists.txt  README.md
cmake/: HipKernels.cmake  hip_backend_config_amd.json
core/: CMakeLists.txt  hip_loader.cpp  hip_loader.hpp  hip_test_fixture.hpp  hip_types.hpp  main.cpp
notes/: raw-hsaco-truncated-implicit-kernarg-no-repro.md
notes/nightly-bringup/: hip-event-elapsed-time.md
runner/: CMakeLists.txt  html_reporter.cpp  html_reporter.hpp  main.cpp  main_ftx.cpp  test_runner.cpp  test_runner.hpp  text_reporter.cpp  text_reporter.hpp  xml_aggregator.cpp  xml_aggregator.hpp
tests/: CMakeLists.txt
tests/api_smoke/: CMakeLists.txt  api_smoke_test.cpp
tests/aql_doorbell/: CMakeLists.txt  aql_doorbell_test.cpp
tests/callback/: CMakeLists.txt  callback_test.cpp
tests/device/: CMakeLists.txt  context_test.cpp  device_test.cpp
tests/error/: CMakeLists.txt  error_test.cpp
tests/event/: CMakeLists.txt
tests/event_timing/: CMakeLists.txt  event_timing_test.cpp
tests/graph/: CMakeLists.txt  graph_test.cpp
tests/host_memory/: CMakeLists.txt  host_memory_test.cpp
tests/kernel_smoke/: CMakeLists.txt  atomics_test.cpp  function_test.cpp  kernel_smoke_test.cpp  occupancy_test.cpp  shared_memory_test.cpp
tests/kernel_smoke/kernels/: atomics.hip  function.hip  memset_kernel.hip  occupancy.hip  shared_memory.hip  vector_add.hip  vector_scale.hip
tests/kpack_hipk/: CMakeLists.txt  kpack_hipk_test.cpp
tests/malloc/: CMakeLists.txt  malloc_test.cpp
tests/memcpy/: CMakeLists.txt  memcpy_test.cpp
tests/memory/: CMakeLists.txt  host_memory_test.cpp  kernel_memory_test.cpp  malloc_test.cpp  managed_memory_test.cpp  memcpy_test.cpp  memory_2d_test.cpp  memset_test.cpp  pointer_test.cpp  symbol_test.cpp
tests/memory/kernels/: increment.hip  symbol_test.hip  vector_add.hip  vector_set.hip
tests/memory_2d/: CMakeLists.txt
tests/memset/: CMakeLists.txt  memset_test.cpp
tests/multithread/: CMakeLists.txt  multithread_test.cpp
tests/nightly_symbols/: CMakeLists.txt  nightly_symbols_test.cpp
tests/stream/: CMakeLists.txt  stream_test.cpp
tests/sync/: CMakeLists.txt
tests/synchronization/: CMakeLists.txt  event_test.cpp  sync_test.cpp
tools/: embed_binary.py
