# Copyright 2026 The IREE Authors
#
# Licensed under the Apache License v2.0 with LLVM Exceptions.
# See https://llvm.org/LICENSE.txt for license information.
# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception

# Test subdirectories
add_subdirectory(api_smoke)
add_subdirectory(kernel_smoke)
add_subdirectory(memory)
add_subdirectory(stream)
add_subdirectory(event)
add_subdirectory(device)
add_subdirectory(error)
add_subdirectory(host_memory)
add_subdirectory(memset)
add_subdirectory(memcpy)